--- a/netflixstyle1.css
+++ b/netflixstyle1.css
@@ -34,26 +34,20 @@ body{
 }
 .select1{
     font-size: 100%;
-    height: 32px;
-    /* width: 124.4px; */
-    width: auto;
-    padding: 5px;
+    
+    padding: 8px 17px;
     border-radius: 0.25rem;
     background-color: black;
     color: white;
 }
 .btn1{
-    height: 32px;
-    
-    /* width: 76.9px; */
-    width:auto;
     background: rgb(229, 9, 20);
     color: rgb(255, 255, 255);
     border: none;
-    font-size:100%;
+    font-size: 100%;
     font-weight: 500;
     border-radius: 0.25rem;
-    padding: 5px;
+    padding: 7px 19px;
 }
 li{
     list-style-type: none;
@@ -144,6 +138,9 @@ li{
     overflow-x:scroll;
     overflow-y: hidden;
 }
+::-webkit-scrollbar{
+    width: 0px;
+}
 .card1{
     border-radius: 10px;
 }
@@ -161,7 +158,7 @@ li{
 }
 /*  */
 .boxhead{
-    margin-top: 20%;
+    margin-top: 6%;
     font-size: 40px;
 }
 .boxcontainer{
@@ -172,15 +169,16 @@ li{
     
 }
 #box{
-    margin-top: 10%;
-    height: 319px;
-    width: 260px;
+    flex-grow: 1;
+    margin-top: 3%;
+    height: 339px;
+    width: 250px;
     background: linear-gradient(149deg, #192247 0%, #210e17 96.86%);
-    border-radius: 18px;
-    padding: 19px 23px;
+    border-radius: 17px;
+    padding: 18px 27px;
     margin-right: 16px;
     position: relative;
-    line-height: 23px;
+    line-height: 31px;
 }
 #box p{
     margin-top: 25px;
@@ -194,7 +192,8 @@ li{
 /*article3*/
 .article3{
     margin-top: 40px;
-    padding: 40px 100px;
+    padding-left: 86px;
+    padding-right: 50px;
 }
 
 .boxhead{
@@ -333,13 +332,13 @@ li{
     font-size: 17px;
 }
 .name1 {
-    font-size: 50px;
-    padding: 8.5px;
-    width: 222px;
-    height: 47px;
-    font-size: 11px;
-    background-color: black;
-    color: white;
+    padding: 18.5px;
+        width: 234px;
+        height: 47px;
+        font-size: 11px;
+        background-color: black;
+        color: white;
+        margin: 20px;
 }
 .button1 {
     font-size: 13px;
@@ -380,6 +379,7 @@ display: none;
 }
 .article3{
     margin-bottom: 50px;
+    padding-left: 24px;
 }
 
 #box{
@@ -419,5 +419,12 @@ display: none;
     font-size: 15px;
     margin-left: -4rem;
     color: #948c8c;
+}
+.footerhead {
+    margin-top: 24px;
+    padding: 20px 84px;
+}
+.footerhead1 {
+    line-height: 35px;
 }
 }
